# overpack

./: .gitignore  Makefile  README.md  hello.py  playground.py  pyproject.toml
scripts/: scrape_vpk_files.py
src/overpack/: __init__.py
src/vpk/: __init__.py
tests/: test___init__.py
tests/vpk_examples/: README.md  source_urls.json
