[project]
name = "overpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gorka Eraña", email = "eranagorka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dict2xml>=1.7.6",
    "meddle",
    "msgspec>=0.18.6",
]

[project.scripts]
vpk = "vpk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "ipython>=8.29.0",
    "mypy>=1.13.0",
    "pyright>=1.1.389",
    "ruff>=0.7.4",
]

[tool.uv.sources]
meddle = { path = "../mdl" }
